--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,7 @@ spring.datasoource.driverClassName: org.postgresql.Driver
 spring.datasource.url: jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username: postgres
 spring.datasource.password:
-
+cors.enabled: false
   #drop n create table again, good for testing, comment this in production
 spring.jpa.hibernate.ddl-auto: update
+
