--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,8 +14,9 @@ spring.datasource.hikari.maximumPoolSize: 5
 spring.datasoource.driverClassName: org.postgresql.Driver
 spring.datasource.url: jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username: postgres
-spring.datasource.password:
+spring.datasource.password: Tagore@007
 cors.enabled: false
   #drop n create table again, good for testing, comment this in production
 spring.jpa.hibernate.ddl-auto: update
+#https://github.com/machadop1407/react-hooks-course/blob/master/public/index.html
 
