--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,4 +19,14 @@ cors.enabled: false
   #drop n create table again, good for testing, comment this in production
 spring.jpa.hibernate.ddl-auto: update
 #https://github.com/machadop1407/react-hooks-course/blob/master/public/index.html
+# Consumer Configuration
+spring.kafka.consumer.bootstrap-servers: localhost:9092
+spring.kafka.consumer.group-id: myGroup
+spring.kafka.consumer.auto-offset-reset: earliest
+spring.kafka.consumer.key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
 
+# Producer configuration
+spring.kafka.producer.bootstrap-servers: localhost:9092
+spring.kafka.producer.key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.producer.value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
